# agh-mlops

./: .gitignore  README.md
lab02/: lab02-homework.ipynb  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb
lab03/: lab03-homework.ipynb  notebook_polars.ipynb
lab04/: homework.ipynb  lab-notebook.ipynb
lab04/data/: Przewodnik-po-sztucznej-inteligencji-2024_IAB-Polska-Embeddings.json
lab04/vectorscale_db/: docker-compose.yml
lab05/: LAB_INSTRUCTION_2_MLFLOW.ipynb  mlflow.db  pyproject.toml
lab06/: .gitignore  LAB_INSTRUCTION.ipynb  homework.ipynb
lab07/: .lab07.ipynb.swp  lab07-onnx.ipynb  lab07.ipynb  pyproject.toml
lab07/torch_app/: Dockerfile  app.py  docker-compose.yaml
lab09/: Dockerfile  LICENSE  REPORT.md  pyproject.toml  tmp
lab09/api/models/: prediction.py
lab09/main/: app.py
lab09/scripts/: download_artifacts.py
lab09/test/: test_app.py
lab10/: .gitignore  main.tf  repository.tf  terraform.tfstate  variables.tf
lab10/1-GitHub-repository-creation/: outputs.tf  variables.tf
lab10/2-GitHub-repository-refactor/: variables.tf
lab10/3-Aliases/: providers.tf  s3.tf
lab10/4-S3-buckets-across-multiple-regions/: outputs.tf
lab10/5-Modules/: s3.tf
lab12/: .gitignore  compose.yaml  pyproject.toml
lab12/config/: airflow.cfg
lab12/dags/: 01_class_pipeline.py  02_taskflow_pipeline.py  04_backfilling.py  05-scheduling_with_venvs.py  06_s3_integration.py  07_connections_and_variables.py  problemy.txt
lab13/: .gitignore  pyproject.toml
lab13/hw/: Dockerfile  docker-compose.yml  main.py  tavily.py  weather.py
lab13/scripts/: ex0.py  (+10 more)
(+27 files in other folders)
