[project]
name = "MLOps_course_AGH_lab_07"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.122.0",
    "numpy",
    "onnx",
    "onnxruntime",
    "onnxscript>=0.5.6",
    "pydantic>=2.12.4",
    "torch",
    "transformers",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
